# PyDomuwa

./: .gitignore  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_tests.sh
alembic/: env.py
backend/: .dockerignore  .env.example  Dockerfile  config.py  database.db  main.py  prod-requirements.txt  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: b8835f791ee2_init_db.py  bb2697c66922_init_tables.py
backend/domuwa/: config.py  database.py  logging.py  main.py  models.py  schemas.py
backend/domuwa/auth/: __init__.py  models.py  routes.py  services.py
backend/domuwa/models/: __init__.py  answer.py  db_models.py  game_category.py  game_room.py  game_type.py  links.py  player.py  player_score.py  qna_category.py  question.py  ranking.py
backend/domuwa/routers/: __init__.py  answers_router.py  common_router.py  game_rooms_router.py  game_types_router.py  generics.py  players_router.py  qna_categories_router.py  questions_router.py
backend/domuwa/services/: answers_services.py  common_services.py  game_rooms_services.py  game_type_services.py  players_services.py  qna_categories_services.py  questions_services.py
backend/domuwa/sqlmodels/: player.py
backend/domuwa/tests/: conftest.py  factories.py  test_answer.py  test_game_type.py  test_player.py  test_qna_category.py  test_question.py
backend/domuwa/utils/: get_computer_ip.py
backend/tests/: common_tc.py  conftest.py  factories.py  test_answer.py  test_game_type.py  test_player.py  test_qna_category.py  test_question.py
(+82 files in other folders)
