[tool.poetry]
name = "domuwa"
version = "0.1.0"
description = ""
authors = ["tobasqo <szymon.j.jaskowski@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.22"
fastapi = "^0.115.3"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.6.0"
httpx = "^0.27.2"
itsdangerous = "^2.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
mypy = "^1.13.0"
poetry-core = "^1.9.1"
types-passlib = "^1.7.7.20240819"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
factory-boy = "^3.3.1"
types-factory-boy = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"

[tool.ruff]
show-fixes = true
target-version = "py311"
line-length = 88
src = ["domuwa/*", "tests/*"]

[tool.ruff.lint]
extend-select = ["ANN", "C4", "COM", "I", "N", "PT", "RET", "SIM", "TCH", "TID"]
ignore = ["ANN003", "ANN101", "ANN102", "ANN201", "ANN202", "COM812", "PT023"]

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["domuwa", "tests"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]
